# Astrology-project

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  PHASE_01_GOLDEN_TEST_SPEC.md  README.md  golden_data.txt  index.html  render.yaml  run_project.bat  style.css
.github/workflows/: ci.yml
astro-engine/: pyproject.toml
astro-engine/app/: __init__.py  main.py  observability.py  versioning.py
astro-engine/app/calc/: aspects.py  ayanamsha.py  chart_snapshot.py  combustion.py  compatibility.py  constants.py  dashas.py  dignity.py  ephemeris.py  houses.py  nakshatra.py  panchang.py  planets.py  synastry.py  transits.py  vargas.py  yogas.py
astro-engine/app/routes/: charts.py  compatibility.py  dasha.py  health.py  panchang.py  profile.py  timeline.py  transits.py
astro-engine/app/schemas/: common.py  requests.py
astro-engine/ephe/: seas_18.se1  semo_18.se1  sepl_18.se1
astro-engine/tests/: test_aspects.py  test_compatibility.py  test_dashas.py  test_dignity.py  test_golden_chart.py  test_health.py  test_nakshatra.py  test_routes.py  test_vargas.py
astro-engine/tests/golden/: panipat_1995.json
docs/: README.md  architecture.md  astro-engine.md  conventions.md  data-model.md  deployment.md  features.md  life-area-timing-graph.md  llm-layer.md  topic-evidence-layer.md  vision.md
docs/phases/: README.md  phase-00-scaffold.md  phase-01-astro-engine-core.md  (+13 more)
scripts/: launch-checklist.ts
web/: middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+322 files in other folders)
