[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astri-astro-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "pydantic>=2.10.3",
  "pyswisseph>=2.10.3.2",
  "uvicorn[standard]>=0.32.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.13.0",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
